# Ember

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
nix/: ccrl-opponents.nix  generate-syzygy-manifest.py  puffin-5.0-deps.json  syzygy-3-4-5.json  syzygy-6.json  syzygy-tablebases.nix  windows-ember.nix  windows-portable.nix
ratings/: ccrl-125th-amateur-d11.md  openings.epd  opponent-research-2026-06-07.md  opponents.toml
src/: backend.rs  bitboard.rs  board.rs  book.rs  engine.rs  evaluate.rs  lib.rs  magic.rs  main.rs  movegen.rs  nnue.rs  opening_book.rs  polyglot_randoms.rs  search.rs  simd.rs  syzygy.rs  time_management.rs  trace.rs  tt.rs  types.rs  zobrist.rs
stupidities/: STUPIDITY_HUNT_PLAN.md
tests/: ccrl_game152_regression.rs  ccrl_repetition_regression.rs  converter_regression.rs  iteration_time_regression.rs  lichess_puzzle_corpus.rs  rules_regression.rs  time_management_regression.rs  uci_smp_regression.rs
tools/: audit_syzygy_pgn.py  backend_bench_machines.md  benchmark_search.py  benchmark_search_shape.py  check_stupidity_cases.py  compare_fixture_corpus.py  compare_versions.py  download_ccrl_ember_games.py  head_to_head.py  hunt_stupidities.py  measure_elo.py  remote-measure-elo.sh  replay_ccrl_bad_moves.py  replay_syzygy_positions.py  sprt.py  test-aarch64-qemu.sh  test-x86_64-qemu-oldcpu.sh
training/: compact_nnue.py  config.rs  config_v2.rs  convert_bullet_to_nnue.py  train_nnue_colab.ipynb  train_nnue_colab_v2.ipynb
windows/: Run Battle.cmd  Verify.cmd  battle.toml  battle_runner.py  (+2 more)
(+33 files in other folders)
