[package]
name = "chess-rs-lib"
version = "0.1.0"
edition = "2021"
default-run = "ember"
 
[[bin]]
name = "ember"
path = "src/main.rs"

[lib]
name = "chess_rs_lib"
path = "src/lib.rs"
 
[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
shakmaty = "0.30"
shakmaty-syzygy = "0.28"

[features]
default = []
decision-trace = []
search-debug = []
 
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
